# relativity-living-light

./: NAVEGACAO_MATEMATICA_RAFAELIA.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
data/results/: repo_inventory.json  repo_inventory.tsv  repo_inventory_summary.json
docs/: DOCUMENTATION_FULL_INVENTORY.md  REAL_NUMBERS_REPORT.md  YML_WORKFLOWS_INDEX.md
