[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relativity-living-light"
version = "0.1.0"
description = "CLI and pipelines for Relativity Living Light (RLL)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Instituto Rafael" }
]
dependencies = [
  "numpy>=1.25",
  "scipy>=1.11",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "requests>=2.28",
  "astropy>=5.3",
  "emcee>=3.1.6",
  "corner>=2.2"
]

[project.scripts]
rll = "rll.cli:main"
rll-latentes = "rll.latentes:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
